--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ section {
 }
 
 /* Headings */
-h1, h2, h3, h4 {
+h1,h2,h3,h4 {
     margin: 5px 0;
 }
 
@@ -35,7 +35,7 @@ h1, h2, h3, h4 {
 
 .widget {
     flex: 1;
-    background: #f8eaff; /* slightly lighter purple */
+    background: #f8eaff; /* lighter purple */
     padding: 10px;
     border-radius: 10px;
     text-align: center;
